// Copyright 2010-2025 Google LLC
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package operations_research.util.python;

message WrappersTestMessage {
  optional int32 int32_field = 1;
  optional int64 int64_field = 2;
  optional uint32 uint32_field = 3;
  optional uint64 uint64_field = 4;
  optional double double_field = 5;
  optional float float_field = 6;
  optional bool bool_field = 7;
  optional string string_field = 8;

  enum TestEnum {
    TEST_ENUM_UNSPECIFIED = 0;
    TEST_ENUM_VALUE1 = 1;
    TEST_ENUM_VALUE2 = 2;
  }
  optional TestEnum enum_field = 9;

  message NestedMessage {
    optional int32 nested_int_field = 1;
  }
  optional NestedMessage nested_message_field = 10;

  enum Value {
    VALUE_UNSPECIFIED = 0;
    VALUE_A = 1;
    VALUE_B = 2;
  }
  optional Value value_enum_field = 11;

  repeated int32 repeated_int32_field = 12;
  repeated string repeated_string_field = 13;
  repeated NestedMessage repeated_nested_message_field = 14;
}
